--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,38 +1,38 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.beforeTest()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:10</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:21</td>   <td>11487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">orderProducts</td> 
-  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:26</td>   <td>16648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:27</td>   <td>17757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:34</td>   <td>23953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">orderProducts</td> 
-  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:40</td>   <td>30340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:41</td>   <td>31386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:32:47</td>   <td>37424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">orderProducts</td> 
-  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:33:41</td>   <td>91387</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:33:42</td>   <td>92717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:33:49</td>   <td>99299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">orderProducts</td> 
-  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:33:55</td>   <td>104922</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:33:56</td>   <td>105966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:34:02</td>   <td>112126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">orderProducts</td> 
-  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:34:48</td>   <td>158592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
-<tr bgcolor="f67b76">  <td>17/12/18 18:34:49</td>   <td>159671</td> <td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.afterTest()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@5b7c14]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@5118327</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:00</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.beforeTest()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:01</td>   <td>33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:14</td>   <td>13098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">orderProducts</td> 
+  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:20</td>   <td>19193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:21</td>   <td>20210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:28</td>   <td>27163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">orderProducts</td> 
+  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:34</td>   <td>33663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:35</td>   <td>34743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:23:42</td>   <td>41385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">orderProducts</td> 
+  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:24:38</td>   <td>97058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:24:39</td>   <td>98434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:24:46</td>   <td>105563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">orderProducts</td> 
+  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:24:53</td>   <td>112004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:24:54</td>   <td>113016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;PlaceOrderTest.setUp()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:25:00</td>   <td>119819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrderTest.orderProducts(java.lang.String)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">orderProducts</td> 
+  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:25:47</td>   <td>166637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.tearDown(org.testng.ITestResult)[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>17/12/20 10:25:48</td>   <td>167665</td> <td>&nbsp;</td><td title="&lt;&lt;PlaceOrderTest.afterTest()[pri:0, instance:com.agnesdora.qa.testcases.PlaceOrderTest@188d8b8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@3076330</td>   <td></td> </tr>
 </table>
